[gd_scene load_steps=18 format=3 uid="uid://cp8a2yrg3b283"]

[ext_resource type="Texture2D" uid="uid://k1ixag2t3jkq" path="res://Assets/Icons/back_icon_white.png" id="1_2s0fx"]
[ext_resource type="Texture2D" uid="uid://bqjdbm2gw3hh0" path="res://Assets/Icons/farm_icon_white.png" id="1_h5m2w"]
[ext_resource type="Script" uid="uid://dm8l6gij41v2w" path="res://Scenes/add_new_farm_modal.gd" id="1_yr8r7"]
[ext_resource type="FontFile" uid="uid://b5ofmvuwbvdxo" path="res://Assets/Fonts/argentum-sans.black.ttf" id="2_y704f"]
[ext_resource type="Script" uid="uid://bcnyg4qos0dr7" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="3_u020p"]
[ext_resource type="Script" uid="uid://mr2fibppbyip" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="4_2s0fx"]
[ext_resource type="FontFile" uid="uid://dtg8qxe14m8ef" path="res://Assets/Fonts/argentum-sans.medium.ttf" id="5_yr8r7"]
[ext_resource type="StyleBox" uid="uid://dmr560corx08x" path="res://Scenes/upload_image_button.tres" id="6_r51qt"]
[ext_resource type="Texture2D" uid="uid://dmavg5nguhwk6" path="res://Assets/Icons/camera_icon_white.png" id="7_haqph"]
[ext_resource type="FontFile" uid="uid://caw5hde3doeyx" path="res://Assets/Fonts/argentum-sans.semibold.ttf" id="8_22vv8"]
[ext_resource type="StyleBox" uid="uid://dr025og5g28m0" path="res://Assets/StyleRes/auth_screen.tres" id="9_pyv2i"]

[sub_resource type="Resource" id="Resource_l0ub0"]
script = ExtResource("4_2s0fx")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_up55o"]
script = ExtResource("4_2s0fx")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qiamd"]
bg_color = Color(0.337255, 0.337255, 0.337255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ie7eg"]
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0, 0, 0, 0.219608)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yxj8g"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.117647, 0.117647, 0.117647, 1)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.0705882)
shadow_size = 10
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ogk8k"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 0.0
content_margin_bottom = 20.0
bg_color = Color(0.205117, 0.205117, 0.205117, 0.560784)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_color = Color(0, 0, 0, 0.192157)
shadow_size = 20
shadow_offset = Vector2(0, 5)

[node name="AddNewFarmModal" type="VBoxContainer"]
z_index = 99
custom_minimum_size = Vector2(586, 435)
anchors_preset = -1
anchor_left = 0.0222222
anchor_top = 0.0139844
anchor_right = 0.979167
anchor_bottom = 0.978203
offset_top = 10.1
offset_bottom = -10.1
script = ExtResource("1_yr8r7")
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 15

[node name="BackButton" type="TextureButton" parent="HBoxContainer2"]
modulate = Color(0.707967, 0.707967, 0.707966, 1)
custom_minimum_size = Vector2(55, 0)
layout_mode = 2
texture_normal = ExtResource("1_2s0fx")
ignore_texture_size = true
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="BarButtonIcon" type="TextureRect" parent="HBoxContainer2"]
modulate = Color(0.878431, 0.878431, 0.878431, 1)
custom_minimum_size = Vector2(55, 55)
layout_mode = 2
texture = ExtResource("1_h5m2w")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="HBoxContainer2"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("2_y704f")
theme_override_font_sizes/font_size = 40
text = "Add New Farm"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="SmoothScrollContainer" type="ScrollContainer" parent="VBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_u020p")
wheel_scroll_damper = SubResource("Resource_l0ub0")
dragging_scroll_damper = SubResource("Resource_up55o")
metadata/_custom_type_script = "uid://bcnyg4qos0dr7"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer"]
custom_minimum_size = Vector2(635, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label4" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_yr8r7")
theme_override_font_sizes/font_size = 20
text = "Farm Image"

[node name="UploadFarmImageButton" type="Button" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
mouse_filter = 1
theme_override_styles/focus = ExtResource("6_r51qt")
theme_override_styles/hover = ExtResource("6_r51qt")
theme_override_styles/pressed = ExtResource("6_r51qt")
theme_override_styles/normal = ExtResource("6_r51qt")

[node name="FarmImage" type="TextureRect" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer/UploadFarmImageButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer/UploadFarmImageButton/FarmImage"]
unique_name_in_owner = true
custom_minimum_size = Vector2(359, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.21657
anchor_top = 0.539681
anchor_right = 0.769729
anchor_bottom = 0.783014
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/font_color = Color(0.627451, 0.627451, 0.627451, 1)
theme_override_fonts/font = ExtResource("5_yr8r7")
theme_override_font_sizes/font_size = 30
text = "Press to upload an
image"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 161

[node name="TextureRect2" type="TextureRect" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer/UploadFarmImageButton/FarmImage"]
unique_name_in_owner = true
modulate = Color(0.658824, 1, 0.0156863, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.43999
anchor_top = 0.313014
anchor_right = 0.53244
anchor_bottom = 0.513014
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_haqph")
expand_mode = 1

[node name="CaputreImageButton" type="Button" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(615, 75)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_yr8r7")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = ExtResource("9_pyv2i")
theme_override_styles/disabled = SubResource("StyleBoxFlat_qiamd")
theme_override_styles/hover = ExtResource("9_pyv2i")
theme_override_styles/pressed = ExtResource("9_pyv2i")
theme_override_styles/normal = ExtResource("9_pyv2i")
text = "Press here to take a picture"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer/CaputreImageButton"]
modulate = Color(0.658824, 1, 0.0156863, 1)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0967481
anchor_top = 0.233333
anchor_right = 0.161789
anchor_bottom = 0.766667
grow_vertical = 2
texture = ExtResource("7_haqph")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_yr8r7")
theme_override_font_sizes/font_size = 20
text = "Farm Name"

[node name="FarmName" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer" groups=["FarmModalFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_22vv8")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")

[node name="Label2" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_yr8r7")
theme_override_font_sizes/font_size = 20
text = "Crop Type"

[node name="CropType" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer" groups=["FarmModalFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.377919, 0.377919, 0.377918, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_22vv8")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")
placeholder_text = "Example: Corn, Rice, Tomato"

[node name="Label3" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_yr8r7")
theme_override_font_sizes/font_size = 20
text = "Description"

[node name="Description" type="TextEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer" groups=["FarmModalFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 160)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_placeholder_color = Color(0.376471, 0.376471, 0.376471, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_22vv8")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
placeholder_text = "Tell us about your farm..."
wrap_mode = 1

[node name="Label5" type="Label" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("5_yr8r7")
theme_override_font_sizes/font_size = 20
text = "Automated Location (Longitude and Latitude via GPS)"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Long" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer/HBoxContainer" groups=["FarmModalFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_22vv8")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")
text = "0.0"
editable = false

[node name="Lat" type="LineEdit" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer/HBoxContainer" groups=["FarmModalFields"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 75)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
theme_override_colors/caret_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_placeholder_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_uneditable_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_colors/font_color = Color(0.878431, 0.878431, 0.878431, 1)
theme_override_fonts/font = ExtResource("8_22vv8")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxFlat_ie7eg")
theme_override_styles/read_only = SubResource("StyleBoxFlat_yxj8g")
theme_override_styles/normal = SubResource("StyleBoxFlat_ogk8k")
text = "0.0"
editable = false

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_constants/separation = 50

[node name="SubmitButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(615, 75)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_yr8r7")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = ExtResource("9_pyv2i")
theme_override_styles/disabled = SubResource("StyleBoxFlat_qiamd")
theme_override_styles/hover = ExtResource("9_pyv2i")
theme_override_styles/pressed = ExtResource("9_pyv2i")
theme_override_styles/normal = ExtResource("9_pyv2i")
text = "Submit"

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
auto_translate_mode = 1
title = "Open a File"
size = Vector2i(665, 360)
ok_button_text = "Open"
file_mode = 0
access = 2
use_native_dialog = true

[connection signal="pressed" from="HBoxContainer2/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer/UploadFarmImageButton" to="." method="_on_upload_farm_image_button_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer2/SmoothScrollContainer/VBoxContainer/CaputreImageButton" to="." method="_on_caputre_image_button_pressed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
